{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 1255,
  "lineage": "ef42b3a5-60fd-566f-c9c3-89c137abb4dd",
  "resources": [
    {
      "module": "module.composer_module",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "443",
                  "9092",
                  "9021",
                  "8083"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-02-24T21:39:52.824-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/idea-ind-data-ai-dev/global/firewalls/dataproctfroletftftgtftf",
            "log_config": [],
            "name": "dataproctfroletftftgtftf",
            "network": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/global/networks/vpc-idea-dev-tf",
            "priority": 1002,
            "project": "idea-ind-data-ai-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/global/firewalls/dataproctfroletftftgtftf",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-cluster-tag-tf"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.compute_instance_linux_module",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rulehs",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-02-24T21:39:37.776-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/idea-ind-data-ai-dev/global/firewalls/vmtftf",
            "log_config": [],
            "name": "vmtftf",
            "network": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/global/networks/vpc-idea-dev-tf1",
            "priority": 1000,
            "project": "idea-ind-data-ai-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/global/firewalls/vmtftf",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "linuxtf"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.compute_instance_linux_module",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "myvmone",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20220213",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/zones/asia-south1-c/disks/myvmonewoneon"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/idea-ind-data-ai-dev/zones/asia-south1-c/instances/myvmonewoneon",
            "instance_id": "2042872799184672080",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "sshKeys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDgTX/HvGN6g+4YtqP8MyPkKqZoMYB0BtvMw+qt+poxlnXa7s9gf3Gs2sX337EAhKFGJt8I4FI7wzqMJ2Yf62N/Wt8DoBrN5qaRPNjCLAfpDu+1XTWtgPGQEi5DW1o28Yva21ev0VwSvQ73LWJ/QGo62UrFAhKRlCO4BhWb6mz1SvytSrXGbczLmjpTAdy89Rdaxspkzw+OcBrC6Gnlrna1rbigmYy0O8ENDK5gvg0r5VHx+JMPOrKqa4COLrOWg+LF1J53YHpNhZSyNwsNflz88qMQP27MFcIf1gTNM96wt+j5TYdgnCsTTCb1LHWORlOULN07z0jfHSpNdrsOH+N/ ec2-user@ip-172-31-109-247.ec2.internal\n"
            },
            "metadata_fingerprint": "uufaWA4WbX8=",
            "name": "myvmonewoneon",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.100.238.53",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/global/networks/vpc-idea-dev-tf",
                "network_ip": "10.0.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/regions/asia-south1/subnetworks/snet-jumpbox-idea-dev-tf",
                "subnetwork_project": "idea-ind-data-ai-dev"
              }
            ],
            "project": "idea-ind-data-ai-dev",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/zones/asia-south1-c/instances/myvmonewoneon",
            "service_account": [
              {
                "email": "vmserviceaccount-tf@idea-ind-data-ai-dev.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "linuxtf"
            ],
            "tags_fingerprint": "ZxBAlx1Ea4k=",
            "zone": "asia-south1-c"
          },
          "dependencies": [
            "module.compute_instance_linux_module.google_service_account.vm",
            "module.main_vpc.google_compute_network.vpc_network",
            "module.main_vpc.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.compute_instance_linux_module",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "myvmtwo",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20220213",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/zones/asia-south1-c/disks/myvmtwotf"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/idea-ind-data-ai-dev/zones/asia-south1-c/instances/myvmtwotf",
            "instance_id": "4980496327884789072",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "sshKeys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDgTX/HvGN6g+4YtqP8MyPkKqZoMYB0BtvMw+qt+poxlnXa7s9gf3Gs2sX337EAhKFGJt8I4FI7wzqMJ2Yf62N/Wt8DoBrN5qaRPNjCLAfpDu+1XTWtgPGQEi5DW1o28Yva21ev0VwSvQ73LWJ/QGo62UrFAhKRlCO4BhWb6mz1SvytSrXGbczLmjpTAdy89Rdaxspkzw+OcBrC6Gnlrna1rbigmYy0O8ENDK5gvg0r5VHx+JMPOrKqa4COLrOWg+LF1J53YHpNhZSyNwsNflz88qMQP27MFcIf1gTNM96wt+j5TYdgnCsTTCb1LHWORlOULN07z0jfHSpNdrsOH+N/ ec2-user@ip-172-31-109-247.ec2.internal\n"
            },
            "metadata_fingerprint": "uufaWA4WbX8=",
            "name": "myvmtwotf",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.100.244.45",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/global/networks/vpc-idea-dev-tf",
                "network_ip": "10.0.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/regions/asia-south1/subnetworks/snet-jumpbox-idea-dev-tf",
                "subnetwork_project": "idea-ind-data-ai-dev"
              }
            ],
            "project": "idea-ind-data-ai-dev",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/zones/asia-south1-c/instances/myvmtwotf",
            "service_account": [
              {
                "email": "vmserviceaccount-tf@idea-ind-data-ai-dev.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "linuxtf"
            ],
            "tags_fingerprint": "ZxBAlx1Ea4k=",
            "zone": "asia-south1-c"
          },
          "dependencies": [
            "module.compute_instance_linux_module.google_service_account.vm",
            "module.main_vpc.google_compute_network.vpc_network",
            "module.main_vpc.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.dataproc_module1",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule",
      "provider": "module.dataproc_module1.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-02-24T21:39:53.009-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/idea-ind-data-ai-dev/global/firewalls/fwrule11",
            "log_config": [],
            "name": "fwrule11",
            "network": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/global/networks/vpc-idea-dev-tf",
            "priority": 1002,
            "project": "idea-ind-data-ai-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/global/firewalls/fwrule11",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-dataproc-tf-tag"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.dataproc_module1",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ruless",
      "provider": "module.dataproc_module1.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-02-24T21:40:03.607-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/idea-ind-data-ai-dev/global/firewalls/fwrule22",
            "log_config": [],
            "name": "fwrule22",
            "network": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/global/networks/vpc-idea-dev-tf",
            "priority": 1002,
            "project": "idea-ind-data-ai-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/global/firewalls/fwrule22",
            "source_ranges": [
              "10.0.66.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "module.main_vpc.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/idea-ind-data-ai-dev/global/networks/vpc-idea-dev-tf",
            "mtu": 1460,
            "name": "vpc-idea-dev-tf",
            "project": "idea-ind-data-ai-dev",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/global/networks/vpc-idea-dev-tf"
          }
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "module.main_vpc.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-24T21:39:52.313-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/idea-ind-data-ai-dev/regions/asia-south1/subnetworks/snet-jumpbox-idea-dev-tf",
            "ip_cidr_range": "10.0.0.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "EXCLUDE_ALL_METADATA"
              }
            ],
            "name": "snet-jumpbox-idea-dev-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/global/networks/vpc-idea-dev-tf",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "idea-ind-data-ai-dev",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/regions/asia-south1/subnetworks/snet-jumpbox-idea-dev-tf"
          },
          "dependencies": [
            "module.main_vpc.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-24T21:39:52.969-08:00",
            "gateway_address": "10.0.16.1",
            "id": "projects/idea-ind-data-ai-dev/regions/asia-south1/subnetworks/snet-app-idea-dev-tf",
            "ip_cidr_range": "10.0.16.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "EXCLUDE_ALL_METADATA"
              }
            ],
            "name": "snet-app-idea-dev-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/global/networks/vpc-idea-dev-tf",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "idea-ind-data-ai-dev",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/regions/asia-south1/subnetworks/snet-app-idea-dev-tf"
          },
          "dependencies": [
            "module.main_vpc.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-24T21:39:52.367-08:00",
            "gateway_address": "10.0.32.1",
            "id": "projects/idea-ind-data-ai-dev/regions/asia-south1/subnetworks/snet-data-idea-dev-tf",
            "ip_cidr_range": "10.0.32.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "EXCLUDE_ALL_METADATA"
              }
            ],
            "name": "snet-data-idea-dev-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/global/networks/vpc-idea-dev-tf",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "idea-ind-data-ai-dev",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/regions/asia-south1/subnetworks/snet-data-idea-dev-tf"
          },
          "dependencies": [
            "module.main_vpc.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-24T21:39:53.034-08:00",
            "gateway_address": "10.0.33.1",
            "id": "projects/idea-ind-data-ai-dev/regions/asia-south1/subnetworks/snet-webnode-idea-dev-tf",
            "ip_cidr_range": "10.0.33.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "EXCLUDE_ALL_METADATA"
              }
            ],
            "name": "snet-webnode-idea-dev-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/global/networks/vpc-idea-dev-tf",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "idea-ind-data-ai-dev",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/regions/asia-south1/subnetworks/snet-webnode-idea-dev-tf"
          },
          "dependencies": [
            "module.main_vpc.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-24T21:39:52.321-08:00",
            "gateway_address": "10.0.50.1",
            "id": "projects/idea-ind-data-ai-dev/regions/asia-south1/subnetworks/snet-micronode-idea-dev-tf",
            "ip_cidr_range": "10.0.50.0/23",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "EXCLUDE_ALL_METADATA"
              }
            ],
            "name": "snet-micronode-idea-dev-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/global/networks/vpc-idea-dev-tf",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "idea-ind-data-ai-dev",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/regions/asia-south1/subnetworks/snet-micronode-idea-dev-tf"
          },
          "dependencies": [
            "module.main_vpc.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-24T21:39:52.570-08:00",
            "gateway_address": "10.0.66.1",
            "id": "projects/idea-ind-data-ai-dev/regions/asia-south1/subnetworks/snet-dataproc-idea-dev-tf",
            "ip_cidr_range": "10.0.66.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "EXCLUDE_ALL_METADATA"
              }
            ],
            "name": "snet-dataproc-idea-dev-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/global/networks/vpc-idea-dev-tf",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "idea-ind-data-ai-dev",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/regions/asia-south1/subnetworks/snet-dataproc-idea-dev-tf"
          },
          "dependencies": [
            "module.main_vpc.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-24T21:39:52.172-08:00",
            "gateway_address": "10.0.110.1",
            "id": "projects/idea-ind-data-ai-dev/regions/asia-south1/subnetworks/snet-composer1-uscentral1-idea-dev-tf",
            "ip_cidr_range": "10.0.110.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "EXCLUDE_ALL_METADATA"
              }
            ],
            "name": "snet-composer1-uscentral1-idea-dev-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/global/networks/vpc-idea-dev-tf",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "idea-ind-data-ai-dev",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/regions/asia-south1/subnetworks/snet-composer1-uscentral1-idea-dev-tf"
          },
          "dependencies": [
            "module.main_vpc.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-24T21:39:52.770-08:00",
            "gateway_address": "10.0.67.1",
            "id": "projects/idea-ind-data-ai-dev/regions/asia-south1/subnetworks/snet-vertex-idea-tf",
            "ip_cidr_range": "10.0.67.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "EXCLUDE_ALL_METADATA"
              }
            ],
            "name": "snet-vertex-idea-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/global/networks/vpc-idea-dev-tf",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "idea-ind-data-ai-dev",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/idea-ind-data-ai-dev/regions/asia-south1/subnetworks/snet-vertex-idea-tf"
          },
          "dependencies": [
            "module.main_vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}